# Rokae_sim2real

rokae_ros2_sim2real/: Readme.md  ros_note.md
rokae_ros2_sim2real/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
rokae_ros2_sim2real/install/aruco/share/aruco/: local_setup.sh  package.sh
rokae_ros2_sim2real/install/aruco_msgs/share/aruco_msgs/: local_setup.sh  package.sh
rokae_ros2_sim2real/install/aruco_ros/lib/aruco_ros/: double  marker_publisher  single
rokae_ros2_sim2real/install/aruco_ros/share/aruco_ros/: package.sh
rokae_ros2_sim2real/install/easy_handeye2/lib/easy_handeye2/: handeye_calibration_commander  handeye_publisher  handeye_server  handeye_server_robot  rqt_evaluator.py
rokae_ros2_sim2real/install/easy_handeye2/share/easy_handeye2/: package.dsv  package.ps1  package.sh
rokae_ros2_sim2real/install/easy_handeye2_demo/lib/easy_handeye2_demo/: tracking_simulator
rokae_ros2_sim2real/install/easy_handeye2_demo/share/easy_handeye2_demo/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
rokae_ros2_sim2real/install/easy_handeye2_msgs/share/easy_handeye2_msgs/: package.dsv  package.ps1  package.sh
rokae_ros2_sim2real/install/realsense2_camera/lib/realsense2_camera/: realsense2_camera_node
rokae_ros2_sim2real/install/realsense2_camera/share/realsense2_camera/: local_setup.sh  package.sh
rokae_ros2_sim2real/install/realsense2_camera_msgs/share/realsense2_camera_msgs/: local_setup.sh  package.sh
rokae_ros2_sim2real/install/realsense2_description/share/realsense2_description/: package.sh
rokae_ros2_sim2real/install/robot_udp_bridge/share/robot_udp_bridge/: package.bash  package.zsh
rokae_ros2_sim2real/install/rokae_description/share/rokae_description/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
rokae_ros2_sim2real/install/rokae_driver/lib/rokae_driver/: move_example  read_force  read_robot_state  sdk_example
rokae_ros2_sim2real/install/rokae_driver/share/rokae_driver/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
rokae_ros2_sim2real/install/rokae_udp_bridge/lib/rokae_udp_bridge/: rokae_udp_bridge
rokae_ros2_sim2real/install/rokae_udp_bridge/share/rokae_udp_bridge/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
rokae_ros2_sim2real/log/: latest_build
rokae_ros2_sim2real/src/robot_communication/rokae_udp_bridge/: CMakeLists.txt
rokae_ros2_sim2real/src/robot_communication/rokae_udp_bridge/launch/: rokae_bridge.launch.py
rokae_ros2_sim2real/src/robot_communication/rokae_udp_bridge/src/: rokae_udp_bridge.cpp
rokae_ros2_sim2real/src/robot_driver/rokae_description/: CMakeLists.txt
rokae_ros2_sim2real/src/robot_driver/rokae_description/launch/: display.launch.py  xMatePro7.rviz
rokae_ros2_sim2real/src/robot_driver/rokae_driver/: CMakeLists.txt
rokae_ros2_sim2real/src/robot_driver/rokae_driver/src/: My_joint_publisher_gui.cpp  driver_pentu.cpp  move_example.cpp  read_force.cpp  read_robot_state.cpp  rokae_controller.cpp  sdk_example.cpp
(+21 files in other folders)
